--- a/views/admin/work-schedule/add.ejs
+++ b/views/admin/work-schedule/add.ejs
@@ -254,7 +254,7 @@
                     hour: '2-digit',
                     minute: '2-digit',
                     second: '2-digit',
-                    timeZone: 'Asia/Jakarta'
+                    timeZone: 'Asia/Makassar' // WITA timezone
                 };
                 
                 const timeString = now.toLocaleString('id-ID', options);
